Fix missing space after category list item

--- a/src/styles/components/_components.categories.scss
+++ b/src/styles/components/_components.categories.scss
@@ -9,6 +9,7 @@
 .c-categories__item {
   .c-categories__link:after {
     content: ', ';
+    white-space: pre;
   }
 
   &:last-child {
